--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
-<div class="layout-wrapper" [ngClass]="{'layout-wrapper-menu-active':sidebarActive}">
+<div class="layout-wrapper" [ngClass]="{'layout-wrapper-menu-active':sidebarActive,
+                                        'layout-overlay-menu':isOverlay()}">
 
     <app-topbar></app-topbar>
     
     <app-sidebar></app-sidebar>
-    
-    <!--<div class="layout-menu" [ngClass]="{'layout-menu-dark':darkMenu}" (click)="onMenuClick($event)">
-        <div #layoutMenuScroller class="nano">
-            <div class="nano-content menu-scroll-content">
-                <app-menu [reset]="resetMenu"></app-menu>
-            </div>
-        </div>
-    </div> -->
     
     <div class="layout-main">
         <div class="layout-main-content">
