--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -10,7 +10,10 @@ body {
     padding: 0;
     margin: 0;
     height: 100%;
-    background-color: $bodyBgColor;
+
+    &.main-body {
+        background-color: $bodyBgColor;
+    }
 
     a {
         text-decoration: none;
