--- a/src/assets/sass/theme/_theme.scss
+++ b/src/assets/sass/theme/_theme.scss
@@ -1,11 +1,13 @@
 @import '../_variables';
 @import '../_mixins';
-@import '_icons';
 @import '_common';
 @import '_forms';
-@import '_panel';
 @import '_data';
-@import '_menu';
-@import '_message';
-@import '_overlay';
+@import '_panels';
+@import '_menus';
+@import '_messages';
 @import '_misc';
+@import '_overlays';
+@import '_media';
+@import '_icons';
+
