--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -228,7 +228,7 @@
                                     margin: 0;
                                     padding: 0;
                                     list-style-type: none;
-                                    display: none;
+                                    overflow: hidden;
 
                                     li {
                                         a {
