--- a/src/assets/sass/layout/_utils.scss
+++ b/src/assets/sass/layout/_utils.scss
@@ -162,118 +162,53 @@
     }
 }
 
-/* 
- * New Grid CSS
- * Only necessary to add if your PrimeFaces version is older than 5.3.14
- */
-.ui-g {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-wrap: wrap;
-}
-            
-.ui-g:after {
-    clear: both;
-    content: "";
-    display: table;
-}
-    
-body {
-    .ui-g-1,
-    .ui-g-2,
-    .ui-g-3,
-    .ui-g-4,
-    .ui-g-5,
-    .ui-g-6,
-    .ui-g-7,
-    .ui-g-8,
-    .ui-g-9,
-    .ui-g-10,
-    .ui-g-11,
-    .ui-g-12 {
-        padding: 0.65em;
-    }
-}        
+/* Ripple Effect Style like Google Material Buttons Effect*/
 
-
-@media screen and (max-width: 40em) {
-    body {
-        .ui-sm-1,
-        .ui-sm-2,
-        .ui-sm-3,
-        .ui-sm-4,
-        .ui-sm-5,
-        .ui-sm-6,
-        .ui-sm-7,
-        .ui-sm-8,
-        .ui-sm-9,
-        .ui-sm-10,
-        .ui-sm-11,
-        .ui-sm-12 {
-            padding: 0.65em;
-        }
-    }
-    
+.ripplelink{
+  /* display:block; */
+  /*color:#fff;*/
+  text-decoration:none;
+  position:relative;
+  overflow:hidden;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  z-index:0;
 }
 
-@media screen and (min-width: 40.063em) {
-    body {
-        .ui-md-1,
-        .ui-md-2,
-        .ui-md-3,
-        .ui-md-4,
-        .ui-md-5,
-        .ui-md-6,
-        .ui-md-7,
-        .ui-md-8,
-        .ui-md-9,
-        .ui-md-10,
-        .ui-md-11,
-        .ui-md-12 {
-            padding: 0.65em;
-        }    
-    }
+.ripplelink:hover{
+	/*z-index:1000;*/
 }
 
-@media screen and (min-width: 64.063em) {
-    body {
-        .ui-lg-1,
-        .ui-lg-2,
-        .ui-lg-3,
-        .ui-lg-4,
-        .ui-lg-5,
-        .ui-lg-6,
-        .ui-lg-7,
-        .ui-lg-8,
-        .ui-lg-9,
-        .ui-lg-10,
-        .ui-lg-11,
-        .ui-lg-12 {
-            padding: 0.65em;
-        }
-    }
-    
+.ink {
+  display: block;
+  position: absolute;
+  background:rgba(255, 255, 255, 0.4);
+  border-radius: 100%;
+  -webkit-transform:scale(0);
+     -moz-transform:scale(0);
+       -o-transform:scale(0);
+          transform:scale(0);
 }
 
-@media screen and (min-width: 90.063em) {
-    body {
-        .ui-xl-1,
-        .ui-xl-2,
-        .ui-xl-3,
-        .ui-xl-4,
-        .ui-xl-5,
-        .ui-xl-6,
-        .ui-xl-7,
-        .ui-xl-8,
-        .ui-xl-9,
-        .ui-xl-10,
-        .ui-xl-11,
-        .ui-xl-12 {
-            padding: 0.65em;
-        }
-    }
+.ripple-animate {
+	-webkit-animation:ripple 0.65s linear;
+   -moz-animation:ripple 0.65s linear;
+    -ms-animation:ripple 0.65s linear;
+     -o-animation:ripple 0.65s linear;
+        animation:ripple 0.65s linear;
 }
 
+@-webkit-keyframes ripple {
+    100% {opacity: 0; -webkit-transform: scale(2.5);}
+}
+@-moz-keyframes ripple {
+    100% {opacity: 0; -moz-transform: scale(2.5);}
+}
+@-o-keyframes ripple {
+    100% {opacity: 0; -o-transform: scale(2.5);}
+}
+@keyframes ripple {
+    100% {opacity: 0; transform: scale(2.5);}
+}
