ported ultima theme

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,7 +1,7 @@
 /* Common */
 $fontSize:14px;
 $fontFamily:"Roboto","Helvetica Neue",sans-serif;
-$lineHeight:18px;
+$lineHeight:1.5em;
 $textColor:#424242;
 $textSecondaryColor:#757575;
 $borderRadius:3px;
@@ -27,29 +27,28 @@ $topbarSubmenuItemHoverBgColor:#e3e3e3;
 /******************************/
 /*           THEME            */
 /******************************/
-$headerPadding:8px 14px;
+$headerPadding:.625em 1em;
+$headerFontSize:1em;
 $headerTextColor:#ffffff;
 
-$contentPadding:8px 14px;
+$contentPadding:.625em 1em;
 $contentBorderColor:#d8d8d8;
 $contentBgColor:#ffffff;
 
 $inputBorderColor:#bdbdbd;
-$inputInvalidBorderColor:#e62a10;
-$inputBgColor:#ffffff;
-$inputErrorTextColor:#e62a10;
-$inputHeaderPadding:6px 10px;
+$inputFontSize:1em;
+$inputHeaderFontSize:1em;
+$inputOptionFontSize:1em;
+$inputHeaderPadding:.625em 1em;
+$invalidInputLabelColor:#e62a10;
+$invalidInputBorderColor:#e62a10;
 
 $buttonTextColor:#ffffff;
+$buttonFontSize:1em;
 
-$listItemPadding:6px 10px;
+$listItemPadding:.625em 1em;
 
 $radioButtonBorderColor:#757575;
 $checkboxBorderColor:#757575;
 
-$errorMessageFontSize:11px;
-$errorMessageIconFontSize:13px;
-
 $dataTableRowBgColorEven:#f4f4f4;
-$paginatorPadding:6px 10px;
-$menuitemPadding:6px 10px;
