--- a/src/app/demo/view/dashboard.html
+++ b/src/app/demo/view/dashboard.html
@@ -4,7 +4,7 @@
             <span class="overview-box-name">Unread Messages</span>
             <span class="overview-box-count">150</span>
             <span class="overview-box-badge">+30%</span>
-            <img src="assets/layout/images/dashboard/chart-1.svg" style="width: 100%" />
+            <img src="assets/layout/images/dashboard/chart-1.svg" />
         </div>
     </div>
     <div class="ui-g-12 ui-md-6 ui-lg-3">
@@ -12,7 +12,7 @@
             <span class="overview-box-name">Check-Ins</span>
             <span class="overview-box-count">532</span>
             <span class="overview-box-badge">+45%</span>
-            <img src="assets/layout/images/dashboard/chart-2.svg" style="width: 100%" />
+            <img src="assets/layout/images/dashboard/chart-2.svg" />
         </div>
     </div>
     <div class="ui-g-12 ui-md-6 ui-lg-3">
@@ -20,7 +20,7 @@
             <span class="overview-box-name">Files Synced</span>
             <span class="overview-box-count">640</span>
             <span class="overview-box-badge">-75%</span>
-            <img src="assets/layout/images/dashboard/chart-3.svg" style="width: 100%" />
+            <img src="assets/layout/images/dashboard/chart-3.svg" />
         </div>
     </div>
     <div class="ui-g-12 ui-md-6 ui-lg-3">
@@ -28,7 +28,7 @@
             <span class="overview-box-name">Users Online</span>
             <span class="overview-box-count">5251</span>
             <span class="overview-box-badge">25%</span>
-            <img src="assets/layout/images/dashboard/chart-4.svg" style="width: 100%" />
+            <img src="assets/layout/images/dashboard/chart-4.svg" />
         </div>
     </div>
     
