--- a/src/assets/sass/layout/_utils.scss
+++ b/src/assets/sass/layout/_utils.scss
@@ -5,41 +5,45 @@
     clear:both;
 }
 
+*[hidden] {
+    display: none; 
+}
+
 .card {
     @include content-shadow();
     @include border-radius(2px);
     background: #ffffff;
-    padding: 16px;
-    margin-bottom: 16px;
+    padding: 1em;
+    margin-bottom: 1em;
     box-sizing: border-box;
     
     &.card-w-title {
-        padding-bottom: 26px;
+        padding-bottom: 2em;
     }
     
     h1 {
-        font-weight: normal;
-        font-size: 22px;
-        margin: 22px 0;
+        font-size: 1.5em;
+        font-weight: 400;
+        margin: 1em 0;
         
         &:first-child {
-            margin-top: 0;
+            margin-top: .667em;
         }
     }
     
     h2 {
-        font-weight: normal;
-        font-size: 20px;
+        font-size: 1.375em;
+        font-weight: 400;
     }
     
     h3 {
-        font-weight: normal;
-        font-size: 18px;
+        font-size: 1.250em;
+        font-weight: 400;
     }
     
     h4 {
-        font-weight: normal;
-        font-size: 16px;
+        font-size: 1.125em;
+        font-weight: 400;
     }
 }
 
@@ -101,6 +105,16 @@
   }
 }
 
+.fadeInDown {
+    -webkit-animation-name: fadeInDown;
+    animation-name: fadeInDown;
+ }
+ 
+ .fadeOutUp {
+     -webkit-animation-name: fadeOutUp;
+     animation-name: fadeOutUp;
+  }
+
 .ui-shadow-1 {
     -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -141,23 +155,7 @@
 .ui-g {
     &.form-group {
         > div {
-            padding: 12px 16px;
-        }
-    }
-}
-
-.ui-panelgrid {
-    &.form-group {
-        .ui-panelgrid-cell {
-            padding: 12px 16px;
-        }
-    }
-}
-
-.ui-selectoneradio, .ui-selectmanycheckbox  {
-    &.form-group {
-        .ui-grid-row > div {
-            padding: 8px 16px;
+            padding: .75em 1em;
         }
     }
 }
