--- a/src/assets/sass/layout/_topbar.scss
+++ b/src/assets/sass/layout/_topbar.scss
@@ -49,7 +49,7 @@
             > li {
                 float: right;
                 position: relative;
-                margin-left: 15px;
+                margin-left: 1em;
                 
                 > a {
                     position: relative;
@@ -57,7 +57,7 @@
                     color: $primaryTextColor;
                     
                     .topbar-icon {
-                        font-size: 28px;
+                        font-size: 2em;
                         @include transition(color .3s);
                     }
                     
@@ -89,6 +89,7 @@
                     .profile-image {
                         display: inline-block;
                         vertical-align: middle;
+                        
                         img {
                             width: 36px;
                             height: 36px;
@@ -128,7 +129,7 @@
                     i {
                         position: absolute;
                         right: 6px;
-                        top: 2px;
+                        top: -2px;
                         color: $primaryTextColor;
                     }
                     
@@ -174,9 +175,9 @@
                         display: block;
                         width: 100%;
                         box-sizing: border-box;
-                        color: $textColor;
+                        color: $textSecondaryColor;
                         
-                        .fa {
+                        i {
                             margin-right: 8px;
                         }
                         
@@ -184,7 +185,7 @@
                             margin-right: 8px;
                         }
                         
-                        .fa,img,span {
+                        i,img,span {
                             vertical-align: middle;
                         }
                         
