--- a/src/app/app.sidebar.component.html
+++ b/src/app/app.sidebar.component.html
@@ -185,40 +185,40 @@
                             <div class="projects-tab">
                                 <ul>
                                     <li class="clearfix">
-                                        <i class="fa fa-github"></i>
-                                        <span class="project-title">GitHub Tasks</span>
+                                        <i class="material-icons">playlist_add_check</i>
+                                        <span class="project-title">Current Tasks</span>
                                         <span>3 open, 4 closed</span>
                                         <div class="project-progressbar">
                                             <div class="project-progressbar-value" style="width: 50%"></div>
                                         </div>
                                     </li>
                                     <li class="clearfix">
-                                        <i class="fa fa-youtube"></i>
-                                        <span class="project-title">YouTube Videos</span>
+                                        <i class="material-icons">videocam</i>
+                                        <span class="project-title">Latest Videos</span>
                                         <span>12 new, 2 subscribers</span>
                                         <div class="project-progressbar">
                                             <div class="project-progressbar-value" style="width: 20%"></div>
                                         </div>
                                     </li>
                                     <li class="clearfix">
-                                        <i class="fa fa-twitter"></i>
-                                        <span class="project-title">Twitter Posts</span>
+                                        <i class="material-icons">message</i>
+                                        <span class="project-title">Unread Posts</span>
                                         <span>24 new messages</span>
                                         <div class="project-progressbar">
                                             <div class="project-progressbar-value" style="width: 65%"></div>
                                         </div>
                                     </li>
                                     <li class="clearfix">
-                                        <i class="fa fa-facebook"></i>
-                                        <span class="project-title">Facebook Messages</span>
-                                        <span>8 total, 4 unread</span>
+                                        <i class="material-icons">favorite</i>
+                                        <span class="project-title">Favorite Contacts</span>
+                                        <span>8 total, 4 approved</span>
                                         <div class="project-progressbar">
                                             <div class="project-progressbar-value" style="width: 80%"></div>
                                         </div>
                                     </li>
                                     <li class="clearfix">
-                                        <i class="fa fa-linkedin"></i>
-                                        <span class="project-title">Linkedin Contacts</span>
+                                        <i class="material-icons">verified_user</i>
+                                        <span class="project-title">Verified Users</span>
                                         <span>90 total, 45 pending</span>
                                         <div class="project-progressbar">
                                             <div class="project-progressbar-value" style="width: 90%"></div>
