--- a/src/assets/sass/layout/_menu_demo.scss
+++ b/src/assets/sass/layout/_menu_demo.scss
@@ -125,9 +125,10 @@
                 
                 i {
                     font-size: 36px;
-                    margin-right: 8px;
+                    margin-right: 12px;
                     float: left;
                     width: 32px;
+                    color: $textSecondaryColor;
                 }
                 
                 .project-title {
