--- a/src/app/demo/view/dashboard.html
+++ b/src/app/demo/view/dashboard.html
@@ -188,6 +188,16 @@
                     <span class="task-name">Flight Ticket</span>
                     <i class="material-icons">&#xE01B;</i>
                 </li>
+                <li>
+                    <p-checkbox binary="true"></p-checkbox>
+                    <span class="task-name">Generate Charts</span>
+                    <i class="material-icons">&#xE24B;</i>
+                </li>
+                <li>
+                    <p-checkbox binary="true"></p-checkbox>
+                    <span class="task-name">Call Client</span>
+                    <i class="material-icons">&#xE0B0;</i>
+                </li>
             </ul>
         </p-panel>
     </div>
@@ -400,35 +410,35 @@
                     </div>
                 </li>
                 <li>
-                    <div class="count" style="background-color:#ffc107">$250</div>
+                    <div class="count" style="background-color:#e91e63">$250</div>
                     <div class="ui-g">
                         <div class="ui-g-6">Tax</div>
                         <div class="ui-g-6">24%</div>
                     </div>
                 </li>
                 <li>
-                    <div class="count" style="background-color:#673AB7">$125</div>
+                    <div class="count" style="background-color:#673ab7">$125</div>
                     <div class="ui-g">
                         <div class="ui-g-6">Invoices</div>
                         <div class="ui-g-6">55%</div>
                     </div>
                 </li>
                 <li>
-                    <div class="count" style="background-color:#00bcd4">$250</div>
+                    <div class="count" style="background-color:#00796b">$250</div>
                     <div class="ui-g">
                         <div class="ui-g-6">Expenses</div>
                         <div class="ui-g-6">15%</div>
                     </div>
                 </li>
                 <li>
-                    <div class="count" style="background-color:#607D8B">$350</div>
+                    <div class="count" style="background-color:#3f51b5">$350</div>
                     <div class="ui-g">
                         <div class="ui-g-6">Bonus</div>
                         <div class="ui-g-6">5%</div>
                     </div>
                 </li>
                 <li>
-                    <div class="count" style="background-color:#FF5722">$500</div>
+                    <div class="count" style="background-color:#e91e63">$500</div>
                     <div class="ui-g">
                         <div class="ui-g-6">Revenue</div>
                         <div class="ui-g-6">25%</div>
