--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -49,4 +49,5 @@ $listItemPadding:.625em 1em;
 $radioButtonBorderColor:#757575;
 $checkboxBorderColor:#757575;
 
+$dataTableBorderColor:#cacaca;
 $dataTableRowBgColorEven:#f4f4f4;
