fixed listbox flicker

--- a/src/app/demo/view/dashboard.html
+++ b/src/app/demo/view/dashboard.html
@@ -39,7 +39,7 @@
             </div>
             <div class="user-card-content">
                 <img src="assets/layout/images/profile-image.png" />
-                <button pButton id="user-button" type="button" icon="ui-icon-plus" (click)="menu.toggle($event)" class="secondary"></button>
+                <button pButton id="user-button" type="button" icon="ui-icon-add" (click)="menu.toggle($event)" class="secondary"></button>
                 
                 <p-menu #menu popup="popup" [model]="items"></p-menu>
                 
