--- a/src/app/demo/view/formsdemo.html
+++ b/src/app/demo/view/formsdemo.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="ui-g-12" style="margin-bottom:10px">
                     <p-autoComplete id="acSimple" [(ngModel)]="country" [suggestions]="filteredCountries" (completeMethod)="filterCountry($event)" field="name" [size]="30"
-                        placeholder="Countries" [minLength]="1"></p-autoComplete>
+                        placeholder="Countries" [minLength]="1" [dropdown]="true"></p-autoComplete>
                 </div>
                 
                 <div class="ui-g-12">
