--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -553,7 +553,7 @@ body {
             .ui-autocomplete-multiple-container {
                 &.ui-inputtext {
                     box-sizing: border-box;
-                    padding: 2px 2px 0px 2px;
+                    padding: 2px 2px 1px 2px;
                 }
                 
                 &.ui-state-focus {
@@ -587,8 +587,8 @@ body {
                 }
             }
             
-            .ui-autocomplete-dropdown {
-                top: .75em;
+            .ui-autocomplete-dropdown.ui-button.ui-button-icon-only {
+                bottom: 3px;
             }
         }
     }
@@ -709,7 +709,8 @@ body {
             width: 1.5em;
             margin-top: 0;
             padding: 0;
-            top: .063em;
+            bottom: 0;
+            top: auto;
             
             .fa {
                 color: $textSecondaryColor;
