--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="layout-wrapper" [ngClass]="{'layout-wrapper-menu-active':sidebarActive,
-                                        'layout-overlay-menu':isOverlay()}">
+                                        'layout-overlay-menu':overlay}">
 
     <app-topbar></app-topbar>
     
