--- a/src/assets/sass/layout/_topbar.scss
+++ b/src/assets/sass/layout/_topbar.scss
@@ -118,6 +118,10 @@
                             }
                         }
                     }
+                    
+                    > ul {
+                        top: 50px;
+                    }
                 }
                 
                 &.search-item {
