fixed datepicker issue

--- a/src/app/demo/view/formsdemo.html
+++ b/src/app/demo/view/formsdemo.html
@@ -27,9 +27,9 @@
                 </div>
                 <div class="ui-g-12 ui-md-4">
                     <span class="md-inputfield">
-                        <input type="text" pInputText class="ng-dirty ng-invalid" placeholder="Invalid">
+                        <input type="text" pInputText class="ng-dirty ng-invalid" placeholder="Invalid" readonly="readonly">
                         <div class="ui-message ui-messages-error ui-corner-all">
-                            This field is required
+                            This field is invalid
                         </div>
                     </span>
                 </div>
