--- a/src/assets/sass/theme/_message.scss
+++ b/src/assets/sass/theme/_message.scss
@@ -113,7 +113,7 @@ body {
                     font-size: 1.75em;
                 }
                 
-                &.fa-warning {
+                &.fa-exclamation-circle {
                     @include material-icon("warning");
                     font-size: 1.75em;
                 }
