--- a/src/assets/sass/theme/_panel.scss
+++ b/src/assets/sass/theme/_panel.scss
@@ -8,6 +8,10 @@ body {
             padding: $headerPadding;
             @include border-radius-top($borderRadius - 1);
             @include border-radius-bottom(0);
+            
+            .ui-panel-title {
+                line-height: 1.5em;
+            }
                         
             .ui-panel-titlebar-icon {
                 position: relative;
