--- a/src/assets/sass/theme/_overlay.scss
+++ b/src/assets/sass/theme/_overlay.scss
@@ -151,12 +151,14 @@ body {
         
         &.ui-tooltip-top {
             .ui-tooltip-arrow {
+                bottom: 1px;
                 border-top-color: #323232;
             }
         }
         
         &.ui-tooltip-bottom {
             .ui-tooltip-arrow {
+                top: 1px;
                 border-bottom-color: #323232;
             }
         }
@@ -169,6 +171,7 @@ body {
         
         &.ui-tooltip-right {
             .ui-tooltip-arrow {
+                left: 1px;
                 border-right-color: #323232;
             }
         }
