--- a/src/app/demo/view/panelsdemo.html
+++ b/src/app/demo/view/panelsdemo.html
@@ -63,7 +63,7 @@
             <h1>Toolbar</h1>
             <p-toolbar>
                 <div class="ui-toolbar-group-left">
-                    <button pButton type="button" label="New" icon="ui-icon-plus" class="green-btn"></button>
+                    <button pButton type="button" label="New" icon="ui-icon-check" class="green-btn"></button>
                     <button pButton type="button" label="Update" icon="ui-icon-update" class="orange-btn"></button>
                         
                     <i class="material-icons" style="vertical-align:middle">dehaze</i>
