--- a/src/app/demo/view/formsdemo.html
+++ b/src/app/demo/view/formsdemo.html
@@ -45,7 +45,7 @@
         </div>
         
         <div class="card card-w-title">
-            <h1>AutoComplete</h1>            
+            <h1>AutoComplete</h1>
             <div class="ui-g form-group">
                 <div class="ui-g-12">
                     <label for="acSimple">Simple</label>
@@ -81,7 +81,7 @@
             <h1>Calendar</h1>
             <p-calendar [inline]="true"></p-calendar> 
             
-            <div class="ui-g form-group" style="margin-top:20px">
+            <div class="ui-g form-group-m" style="margin-top:20px">
                 <div class="ui-g-12">
                     <p-calendar id="popup" placeholder="Popup"></p-calendar>
                 </div>
