--- a/src/assets/sass/layout/_utils.scss
+++ b/src/assets/sass/layout/_utils.scss
@@ -158,6 +158,12 @@
             padding: .75em 1em;
         }
     }
+    
+    &.form-group-m {
+        > div {
+            padding: 1em;
+        }
+    }
 }
 
 /* Ripple Effect Style like Google Material Buttons Effect*/
